--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
+    <meta name="description" content="A technical test about task list width Laravel (Backend) and  Vue + Quasar (Frontend)" />
+    <meta name="author" content="Dricc-new" />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="es" />
+
+    <meta property="og:title" content="Technical Test - Task List (Laravel + Vue + Quasar)" />
+    <meta property="og:description" content="A technical test about task list width Laravel (Backend) and  Vue + Quasar (Frontend)" />
+    <meta property="og:image" content="https://tt-task-list.idrawdreams.org/og-taskmanager.jpg" />
+    <meta property="og:url" content="https://tt-task-list.idrawdreams.org" />
+    <meta property="og:type" content="Web App" />
+
+    <!-- 🐦 Twitter Cards -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Technical Test - Task List (Laravel + Vue + Quasar)" />
+    <meta name="twitter:description" content="A technical test about task list width Laravel (Backend) and  Vue + Quasar (Frontend)" />
+    <meta name="twitter:image" content="https://tt-task-list.idrawdreams.org/og-taskmanager.jpg" />
+
+
     <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
